--- a/style.css
+++ b/style.css
@@ -5,37 +5,85 @@
     font-weight: 500;
 }
 
+body
+{
+    background: hsla(152, 100%, 50%, 1);
+
+    background: linear-gradient(90deg, hsla(152, 100%, 50%, 1) 0%, hsla(186, 100%, 69%, 1) 100%);
+
+    background: -moz-linear-gradient(90deg, hsla(152, 100%, 50%, 1) 0%, hsla(186, 100%, 69%, 1) 100%);
+
+    background: -webkit-linear-gradient(90deg, hsla(152, 100%, 50%, 1) 0%, hsla(186, 100%, 69%, 1) 100%);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+
+h1
+{
+    text-align: center;
+}
+
+.scoreboard
+{
+    margin-left: auto;
+    margin-right: auto;
+    flex-direction: column;
+}
 
 .scoreboard h4{
-    padding: 50px;
+    padding: 25px;
     font-size: 35px;
     border: 1px solid black;
     display: flex;
-    float: left;
+    max-width: 300px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-.container{
+.board
+{
+    margin-left: auto;
+    margin-right: auto;
+    width: 375px;
+    height: 375px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 5px;
+}
+
+.cell {
+    width: 120px;
+    height: 120px;
+    border: 1px solid #D3D3D3;
+    background-color: #F5F5F5;
+    font-size: 20px;
     display: flex;
     justify-content: center;
-    flex-direction: column;
     align-items: center;
 }
 
-.gameBoard{
-    justify-content: center;
-    width: 900px;
-    height: 300px;
+.cell:hover
+{
+    cursor: pointer;
+    background-color: #FFFFE0;
 }
 
-.cells{
-    display: flex;
-}
-
-.cell{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.restartButton{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    height: 40px;
     width: 150px;
-    height: 150px;
-    border: 1px solid black;
+    background-color: #FFFFFF;
+    border: 1px solid #000000;
+    border-radius: 100px;
+    font-size: 18px;
+    margin-top: 30px;
+}
+
+.restartButton:hover
+{
+    background-color: #000000;
+    color: #FFFFFF;
+    cursor: pointer;
 }
